# virtalloc

./: CMakeLists.txt  README.md
docs/: BUILDING.md  TESTING.md
include/: virtalloc.h
internal/virtalloc/: alloc_settings.h  allocator.h  allocator_impl.h  allocator_settings.h  allocator_utils.h  check_allocator.h  checksum.h  cross_platform_lock.h  fast_hash.h  gp_memory_slot_meta.h  helper_macros.h  math_utils.h  memory_slot_meta.h  small_rr_memory_slot_meta.h  virtual_allocator.h
scripts/: analyse_checksum_results.py  disasm_alloc_instructions.py  example_bucket_tree.dot  example_heap_dump.txt  generate_alloc_instructions.py  heap_visualizer.html
src/: allocator.c  allocator_impl.c  allocator_utils.c  check_allocator.c  checksum.c  cross_platform_lock.c  fast_hash.c  math_utils.c  release_assert.c  thread_sync.c  virtalloc.c
tests/: reference_tests.c  test_utils.h  testing.h  tests.c
tests/json_parser/: json_parser.c  json_parser_virtalloc.c  test_large.json  test_small.json
tests/simulated_interpreter/: reference_sim.c  virtalloc_sim.c
